--- a/Homework2/Templates/es6-webpack-template/node/src/css/styles.css
+++ b/Homework2/Templates/es6-webpack-template/node/src/css/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 10px;
     overflow: hidden;
-    background: #262626;
+    background: #656565;
   }
   
   rect {
@@ -31,18 +31,69 @@ body {
     font-family: 'Times New Roman', Times, serif;
     color:beige;
   }
+  p.type1 {
+    margin: 15px;
+    font-family: 'Times New Roman', Times, serif;
+    color:rgb(181, 181, 153);
+  }
 
   text {
     font-family: sans-serif;
   }
+
+  div.topright {
+    position: absolute;
+    right: 16px;
+    top: 5px;
+  }
+
+  div.bottomright {
+    position: absolute;
+    right: 30px;
+    left: 700px;
+    top: 300px;
+    bottom: 10px;
+  }
+
+  div.right{
+    position: absolute;
+    right: 0px;
+    
+  }
   
+  div.sticky {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    background-color: green;
+    border: 2px solid #4CAF50;
+  }
+
+  div.static {
+    position: static;
+    top: 80px;
+    left: 10px;
+    right: 80;
+    width: 550px;
+    height: 350px;
+  }
+
+  div.topstatic {
+    position: static;
+    top: 20px;
+    left: 10px;
+    right: 80;
+    width: 500px;
+    height: 450px;
+  }
+
   .tick text {
-    font-size: 2.7em;
-    fill: #635F5D;
+    font-size: 1.7em;
+    fill: #000000;
   }
   
   .tick line {
-    stroke: #C0C0BB;
+    stroke: #fcfcfa;
     
   }
 
