--- a/Homework2/Templates/es6-webpack-template/node/src/css/styles.css
+++ b/Homework2/Templates/es6-webpack-template/node/src/css/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 10px;
     overflow: hidden;
-    background: #656565;
+    background: #a5d7ed;
   }
   
   rect {
@@ -10,31 +10,37 @@ body {
   
   h1 {
     margin: 10px;
-    color: white;
+    color: rgb(0, 0, 0);
     margin-top: 20px;
   }
 
   h2 {
-    color: rgb(12, 235, 231);
+    color: rgb(0, 0, 0);
     margin-top: 30px;
     margin: 10px;
   }
 
   h3 {
     margin: 10px;
-    color: white;
+    color: rgb(0, 0, 0);
     margin-top: 35px;
+  }
+
+  h4 {
+    margin: 10px;
+    color: rgb(0, 0, 0);
+    margin-top: 5px;
   }
 
   p {
     margin: 15px;
     font-family: 'Times New Roman', Times, serif;
-    color:beige;
+    color:rgb(41, 41, 18);
   }
   p.type1 {
     margin: 15px;
     font-family: 'Times New Roman', Times, serif;
-    color:rgb(255, 255, 255);
+    color:rgb(35, 40, 32);
   }
 
   text {
@@ -50,7 +56,7 @@ body {
   div.bottomright {
     position: absolute;
     right: 30px;
-    left: 700px;
+    left: 800px;
     top: 300px;
     bottom: 10px;
   }
